Intermediate checkin to fix positioning of above/below tooltips positioned on right hand side of viewport.   Aligns tooltip right-hand-side with target right-hand-side, and puts arrow near right. Also fixed rhino warnings in Button.js. Refs #5214.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@11893 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -544,12 +544,7 @@ table .dijitComboButton .dijitButtonNode {
 	top: -10000px;
 	overflow: visible;
 }
-/*
-See http://trac.dojotoolkit.org/ticket/5006
-.dijitTooltipDialog {
-	position: relative;
-}
-*/
+
 .dijitTooltipContainer {
 	border: solid black 2px;
 	background: #b8b5b5;
